samples/_failures_safe/1761157388_713f75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d63b180.c:167:1: error: expected identifier or ‘(’ at end of input
  167 | int
      | ^~~
